--- a/mystyle.css
+++ b/mystyle.css
@@ -249,6 +249,32 @@ a#logo_link {
   display: inline;
 }
 
+#box {
+  border-radius: 2px;
+  background: linear-gradient(-60deg, rgb(62, 178, 255), rgb(153, 242, 238), rgb(151, 244, 255), rgb(254, 170, 230));
+  box-shadow: rgba(60, 60, 60, 0.24) 0px 3px 8px;
+  padding: 30px;
+  /* 
+  border-top: 3px solid rgb(20, 57, 61);
+  border-left: 3px solid rgb(20, 57, 61);
+  border-right: 3px solid rgb(20, 57, 61);
+  border-bottom: 3px solid rgb(20, 57, 61);
+  */
+  margin: 20px; 
+  margin-bottom: 8%; 
+}
+
+
+
+#box h2 {
+  color: rgb(3, 15, 33);
+  font-weight: bold;
+}
+
+#box p {
+  color: rgb(3, 15, 33);
+}
+
 
 
 
